fix: multiselect select all alignment issue for sm and lg sizes

--- a/packages/styles/scss/components/multiselect/_multiselect.scss
+++ b/packages/styles/scss/components/multiselect/_multiselect.scss
@@ -13,6 +13,7 @@
 @use '../../theme' as *;
 @use '../../utilities/convert';
 @use '../../utilities/focus-outline' as *;
+@use '../../utilities/layout';
 
 /// Multi select styles
 /// @access public
@@ -56,7 +57,7 @@
   .#{$prefix}--multi-select.#{$prefix}--multi-select--selectall
     .#{$prefix}--list-box__menu-item:first-child
     .#{$prefix}--list-box__menu-item__option {
-    padding: 0.6875rem $spacing-05;
+    padding: calc((layout.size('height') - 1rem) / 2 - 1px) $spacing-05;
     margin: 0;
     border-block-end: 1px solid $border-subtle-01;
   }
